--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </nav>
       <div class="text">
         <h1 class="firstline" style="color: black; padding: 300px;">Ik ontwerp & bouw
-            <span class="firstline2" style="color: aquamarine; margin-top: 50px;">high-end</span>
+            <span class="firstline2" style="color: rgb(21, 239, 166); margin-top: 50px;">high-end</span>
             <span class="firstline2" style="color: rgb(83, 83, 243); margin-top: 50px;">WorldPress websites</span></h1>
       </div>
       <div class="photo">
